--- a/matrixDeterminant.html
+++ b/matrixDeterminant.html
@@ -124,12 +124,7 @@
     }
     const showInverseMatrix = () => {
         inverseMatrix = []
-            // [
-            //     [1, -3, 0, 0],
-            //     [0, 1, 0, 0],
-            //     [0, 0, 2, 1],
-            //     [0, 0, 1, 1]
-            // ]
+        inverseMatrixTable.innerText = ''
         const error = findInverseMatrix(matrix)
         if (error) {
             alert(error)
